--- a/MOOSApps/CMakeLists.txt
+++ b/MOOSApps/CMakeLists.txt
@@ -37,5 +37,6 @@ add_subdirectory(src/iSimGPS)
 add_subdirectory(src/iSimDVL)
 add_subdirectory(src/iSimDepth)
 add_subdirectory(src/pAcommsManager)
+add_subdirectory(src/pVRP)
 #add_subdirectory(src/comms_test)
 add_subdirectory(src/pAcommsScheduler)
